--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,10 @@
     <string name="mot_de_passe">Mot de passe</string>
     <string name="connexion">Connexion</string>
     <string name="register">S\'enregistrer</string>
+    <string name="title_activity_login">Sign in</string>
+    <string name="title_activity_registration">RegistrationActivity</string>
+    <string name="firstname">Prénom</string>
+    <string name="Lastname">Nom</string>
+    <string name="password_verification">Vérification du mot de passe</string>
+    <string name="validate">Valider</string>
 </resources>
