--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,7 @@
     <string name="fill_all_fields">Veuillez saisir tous les champs</string>
     <string name="password_are_different">Les mots de passe ne sont pas identiques</string>
     <string name="URL_API">"http://10.0.2.2:3000/api/"</string>
+    <string name="account_created">Votre compte a bien été créé</string>
+    <string name="wrong_mail">Email invalide !</string>
+    <string name="connexion_error">Une erreur est survenue, veuilliez vérifier votre connexion internet.</string>
 </resources>
