--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,10 @@
     <string name="wrong_mail">Email invalide !</string>
     <string name="connexion_error">Une erreur est survenue, veuilliez vérifier votre connexion internet.</string>
     <string name="connection_failed">Combinaison email - mot de passe inccorect.</string>
+    <string name="title_activity_tab">TabActivity</string>
+    <string name="action_settings">Settings</string>
+    <string name="search">Recherche</string>
+    <string name="events">Événements</string>
+    <string name="lives">En direct</string>
+    <string name="library">Bibliothèque</string>
 </resources>
