--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,8 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="account_error">Une erreur est survenue. Code (Account)</string>
+    <string name="logout">Logout</string>
+    <string name="change_password">Changer de mot de passe</string>
+    <string name="new_password">Nouveau mot de passe</string>
+    <string name="password_modification_success">Le mot de passe à été modifié avec succès !</string>
 </resources>
