--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,7 @@
     <string name="createEventError">Une erreur est survenue</string>
     <string name="error_upload_image">Problème lors de l\'upload de l\'image</string>
     <string name="search_user">Rechercher un utilisateur</string>
-    <string name="user_pic">Photo de profil</string>
+    <string name="user_pic">Changer votre photo de profil</string>
     <string name="changeUserPic">Sélectionner une photo de profil</string>
+    <string name="success_picture_user">Votre photo de profil a été mise à jour</string>
 </resources>
