--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,7 @@
     <string name="success_picture_user">Votre photo de profil a été mise à jour</string>
     <string name="follow">Follow</string>
     <string name="unfollow">Unfollow</string>
+    <string name="chose_event_date">Choisissez une date pour votre évènement</string>
+    <string name="you_must_select_event_date">Veuillez saisir une date</string>
+    <string name="my_events">Mes évènements</string>
 </resources>
