Delete music from playlist

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,4 +85,5 @@
     <string name="rate_this_music">Que pensez-vous de cette musique ?</string>
     <string name="newNote">Votre note a été prise en compte</string>
     <string name="rateThisSong">Notez cette musique</string>
+    <string name="musicRemovedFromPlaylist">La musique a été retirée de la playlist</string>
 </resources>
