--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,4 +88,5 @@
     <string name="musicRemovedFromPlaylist">La musique a été retirée de la playlist</string>
     <string name="deletePlaylist">Playlist supprimée</string>
     <string name="highlight">Vous avez mis en avant cet artiste</string>
+    <string name="artistsToDiscover"><u>Artistes qui pourraient vous intéresser</u></string>
 </resources>
