--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,4 +90,6 @@
     <string name="highlight">Vous avez mis en avant cet artiste</string>
     <string name="artistsToDiscover"><u>Artistes qui pourraient vous intéresser</u></string>
     <string name="deleteMusic">Musique supprimée avec succes</string>
+    <string name="live">Live</string>
+    <string name="liveUrl">rtmp://live.kicksound.fr/live/</string>
 </resources>
